Fix TabScroller align styles

--- a/src/TabScroller/TabScroller.scss
+++ b/src/TabScroller/TabScroller.scss
@@ -7,15 +7,15 @@
         overflow-x: scroll;
     }
 
-    .mdc-tab-scroller--align-start .mdc-tab-scroller__scroll-area {
+    &.mdc-tab-scroller--align-start .mdc-tab-scroller__scroll-area {
         justify-content: flex-start;
     }
     
-    .mdc-tab-scroller--align-end .mdc-tab-scroller__scroll-area {
+    &.mdc-tab-scroller--align-end .mdc-tab-scroller__scroll-area {
         justify-content: flex-end;
     }
     
-    .mdc-tab-scroller--align-center .mdc-tab-scroller__scroll-area {
+    &.mdc-tab-scroller--align-center .mdc-tab-scroller__scroll-area {
         justify-content: center;
     }
 }
